src/objects/Partner_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Website_del__c</fullName>
        <formula>Company_Name__r.Website</formula>
        <label>Partner Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_End_Users__c</fullName>
        <description>Percentage of End user in overall Revenue Mix</description>
        <inlineHelpText>What percentage of End Users are part of your overall revenue?</inlineHelpText>
        <label>Percentage of End Users</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_ID_Access_Control__c</fullName>
        <label>Personal ID/Access Control %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Patient_Wristband__c</fullName>
        <label>Pharmacy/Patient Wristband %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>NetBeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Openstream CueMe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RhoMobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Titanium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xamarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zatar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Revenue__c</fullName>
        <description>Overall company/division revenue for the previous year</description>
        <inlineHelpText>What was your overall company/division revenue for the previous year?</inlineHelpText>
        <label>Previous Year Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000-$99,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$99,001-$250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000-$500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,001-$1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1M-$5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over $5M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Segment_Revenue__c</fullName>
        <label>Primary Solution Revenue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Solution__c</fullName>
        <label>Primary Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Autonomous Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection and Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Command and Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected First Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Government Service Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Guest and Self-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Shopper and Self-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Soldier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Traveler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device and Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch and Workflow Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Safety and Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Communications and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Accountability and Credentialing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Responder Life Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management and Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Line Command</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Wi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health, Human and Social Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Wireless Comms Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intelligent Transportation System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Safety</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Supervertical__c</fullName>
        <label>Primary Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy and Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom and Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_and_Apply_System__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you manufacture and/or integrate your own Print and Apply system?</inlineHelpText>
        <label>Print and Apply System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Printed_Catalog_Total_Revenue__c</fullName>
        <label>Printed Catalog Total Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Printronix__c</fullName>
        <label>Printronix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Revenue__c</fullName>
        <inlineHelpText>Indicate your professional services business (i.e. consulting, installation, site survey, etc.) as a percent of your total revenue.</inlineHelpText>
        <label>Professional Services Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Professional_Services__c</fullName>
        <inlineHelpText>Indicate the types of professional services your company provides. (select all that apply)</inlineHelpText>
        <label>Professional Services</label>
        <picklist>
            <picklistValues>
                <fullName>Not Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Config Install Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Install/Install Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Professional_Services_of_Tot_Revenue__c</fullName>
        <label>Professional Services % of Tot Revenue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <picklist>
            <picklistValues>
                <fullName>ASP.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C / C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delphi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaScript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective-C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VB.NET/VB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Managers_Consultants__c</fullName>
        <label># Project Managers/Consultants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promote_Auction_3rd_Party_Marketplaces__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advertise/promote Zebra product on any public auction site or third-party marketplaces?</description>
        <inlineHelpText>Do you advertise/promote Zebra product on any public auction site or third-party marketplaces?</inlineHelpText>
        <label>Promote Auction/3rd Party Marketplaces</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promoters_Resellers_of_Zebra__c</fullName>
        <inlineHelpText>Provide any and all business names and/or DBAs under which your company actively promotes/resells Zebra Products</inlineHelpText>
        <label>Promoters/Resellers of Zebra</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provide_an_Application_Solution_Overview__c</fullName>
        <inlineHelpText>Please provide an overview of your company&apos;s application/solution and how it fits with Zebra&apos;s offerings.</inlineHelpText>
        <label>Provide an Application/Solution Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Assurance__c</fullName>
        <label>Quality Control/Assurance %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVENUE_ACTIVITIES_TOTAL__c</fullName>
        <description>This formula field takes a real-time sum of the Total_Revenue_Activities and displays it for the user</description>
        <formula>(IF(ISBLANK(Outside_Field_Sales_Total_Revenue__c), 0, 1) + 
IF(ISBLANK(Telesales_Total_Revenue__c), 0,1) + 
 IF(ISBLANK(Printed_Catalog_Total_Revenue__c), 0, 1) + 
 IF(ISBLANK(Internet_Total_Revenue__c), 0, 1) + 
 IF(ISBLANK(Retail_Total_Revenue__c), 0, 1) + 
 IF(ISBLANK(Other_Revenue_Activities__c), 0, 1)) / 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REVENUE ACTIVITIES TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RFID__c</fullName>
        <label>RFID %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refer_to_Distributor__c</fullName>
        <label>Refer to Distributor %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refer_to_Zebra__c</fullName>
        <label>Refer to Zebra %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Services_break_fix_Revenue__c</fullName>
        <label>Repair Services (break/fix) Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Replacement_of_existing_printer__c</fullName>
        <label>Replacement of existing printer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reseller_Health__c</fullName>
        <description>Sales Team member assessment of overall reseller health</description>
        <inlineHelpText>Sales Team member assessment of overall reseller health</inlineHelpText>
        <label>Reseller Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resellers_Customer_Mix__c</fullName>
        <label>Resellers Customer Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Management__c</fullName>
        <label>Retail Management %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail_Total_Revenue__c</fullName>
        <label>Retail Total Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <label>Retail %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Customer_Service__c</fullName>
        <label>% Revenue Customer Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Hardware__c</fullName>
        <label>% Revenue Hardware Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Professional_Sales__c</fullName>
        <label>% Revenue Professional Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Software__c</fullName>
        <label>% Revenue Software Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reverse_Logistics__c</fullName>
        <label>Reverse Logistics %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SATO__c</fullName>
        <label>SATO %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Auto_E_Com_Orders__c</fullName>
        <label>Percentage Revenue Internet Only Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Field_Sales__c</fullName>
        <label>Percentage Revenue Face to Face Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Online_Print_Catalogs__c</fullName>
        <label>Percentage Revenue Internet-Human Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sample_Specimen_Management__c</fullName>
        <label>Sample/Specimen Management %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScanSource__c</fullName>
        <label>ScanSource %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shipping_Receiving__c</fullName>
        <label>Shipping/ Receiving %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Software_Service_Tech_Support_Revenue__c</fullName>
        <description>Software service contracts or other technical support revenue</description>
        <inlineHelpText>Software service contracts or other technical support revenue</inlineHelpText>
        <label>Software Service/Tech Support Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Software_application_based_Revenue__c</fullName>
        <label>Software(application-based) Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Specialized_Application_Expertise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your company have expertise in a specialized application that your company developed and sold across industries? If yes, check the box.</inlineHelpText>
        <label>Specialized Application Expertise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sports_Entertainment__c</fullName>
        <label>Sports &amp; Entertainment %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Star_Micronics__c</fullName>
        <label>Star Micronics %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steps_to_Submit__c</fullName>
        <description>Steps to Submit your profile:  
Step 1: Check the box to verify your data; 
Step 2: Hit the SAVE button; 
Step 3: Hit the Submit for Approval button</description>
        <inlineHelpText>Steps to submit your Profile: Step 1: Check the box to verify your data; Step 2: Click the SAVE button; Step 3: Click the Submit for Approval button at either the Top of the page or Bottom of the page</inlineHelpText>
        <label>Steps to Submit</label>
        <length>28000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplies_Accessories_Revenue__c</fullName>
        <label>Supplies &amp; Accessories Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Supplies_Converter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of customer that converts supplies</description>
        <label>Supplies Converter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Engineers__c</fullName>
        <label># System Engineers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Support_Resources__c</fullName>
        <label># Technical Support Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology_Offerings__c</fullName>
        <inlineHelpText>Please indicate if you offer any of the following options to your customers (please check all that apply)</inlineHelpText>
        <label>Technology Offerings</label>
        <picklist>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware as a Service (HaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tele_Inside_Sales__c</fullName>
        <description>Tele/Inside Sales %</description>
        <label>Tele/Inside Sales %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Telesales_Total_Revenue__c</fullName>
        <label>Telesales Total Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Third_Party_Professional_Services_Name__c</fullName>
        <inlineHelpText>If Third Party Professional Services % is &gt; 0, provide their names.</inlineHelpText>
        <label>Third Party Professional Services Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Professional_Services__c</fullName>
        <label>Third Party Professional Services %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toshiba_TEC__c</fullName>
        <label>Toshiba/TEC %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Company_Employees__c</fullName>
        <label>Total Number of Company Employees</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Inside_Sales_Personnel__c</fullName>
        <label>Total Number of Inside Sales Personnel</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Sales_Personnel__c</fullName>
        <label>Total Number of Sales Personnel</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Services_Employees__c</fullName>
        <label>Total Number of Services Employees</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Technical_Personnel__c</fullName>
        <label>Total Number of Technical Personnel</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Service_Revenue_Last_FY__c</fullName>
        <label>Total Sales/Service Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>$0-$150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$150,001-$600,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$600,001 - $1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,001 - 3,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,000,001 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,001 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Employees__c</fullName>
        <label># Training Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Logistics__c</fullName>
        <label>Transportation &amp; Logistics %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upgrade_of_existing_printer__c</fullName>
        <label>Upgrade of existing printer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vertical_Market_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your company have expertise in specific vertical market? If yes, check the box.</description>
        <inlineHelpText>Does your company have expertise in specific vertical market? If yes, check the box.</inlineHelpText>
        <label>Vertical Market Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WIP_Management__c</fullName>
        <label>WIP Management %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website Field for the &quot;Potential Partner Application&quot;</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wynit_Card__c</fullName>
        <label>Wynit (Card)%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Market_Place_Websites__c</fullName>
        <label>3rd Party Market Place Websites</label>
        <picklist>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonanza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecrater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newegg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overstock.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricegrabber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rakuten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Shopping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zebra_Product_Focus__c</fullName>
        <label>Zebra Product Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabletop</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zebra__c</fullName>
        <label>Zebra %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>